change Nullable logic on AccessTokenResponse.java
Signed-off-by: Laurent ARNAL <laurent@clae.net>